# routes/authentication.js
@@ -4,9 +4,9 @@ const authController = require('../controllers/auth')
 
 router.get('/login', authController.authenticateWithGoogle);
 
-router.get('/auth/google/callback', authController.signUp);
+router.get('/google/callback', authController.handleGoogleCallback);
 
-router.get('/logout', (res, req, next) => {
+router.get('/logout', (req, res, next) => {
     req.logout((err) => {
         if (err) {
             next(err)
@@ -14,5 +14,5 @@ router.get('/logout', (res, req, next) => {
         res.redirect('/')
     })
 })
-
+ 
 module.exports = router;
